Fix overflow and excerpt

--- a/_sass/block/_b_post.scss
+++ b/_sass/block/_b_post.scss
@@ -63,4 +63,8 @@
   p {
     margin: 20px 0;
   }
+
+  code {
+    overflow-wrap: break-word;
+  }
 }
